welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: type mismatch;
 found   : Unit
 required: Int
  for (c <- 1 to num) {
         ^